# DPPTGG

./: .gitignore  CMakeLists.txt  FindHenifig.cmake  README.md
Henifig/include/henifig/: henifig.hpp
include/dpptgg/: dpptgg.hpp  exception.hpp  timestamp.hpp  topgg_handler.hpp  topgg_listener.hpp  topgg_poker.hpp
lib/dpptgg/: exception.cpp  timestamp.cpp  topgg_handler.cpp  topgg_listener.cpp  topgg_poker.cpp
src/: main.cpp
test/: CMakeLists.txt  README.md  test.cpp
test/cmake/: FindDPPTGG.cmake
